✨feature: implemented SignUp

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -1,10 +1,29 @@
 {
+  "common": {
+    "email": "Email",
+    "password": "Password",
+    "login": "Login",
+    "signUp": "Sign Up",
+    "emailPlaceholder": "john.doe@example.com",
+    "passwordPlaceholder": "********"
+  },
   "login": {
-    "title": "Login",
-    "emailPlaceholder": "Email",
-    "passwordPlaceholder": "Password",
-    "loginButton": "Login",
+    "submitButton": "Login",
     "loggingIn": "Logging in...",
-    "loginFailed": "Login failed"
+    "loginFailed": "Login failed",
+    "title": "Login to your account",
+    "description": "Enter your email below to login to your account",
+    "forgotPassword": "Forgot your password?"
+  },
+  "signUp": {
+    "submitButton": "Sign Up",
+    "signingUp": "Signing up...",
+    "signUpFailed": "Sign up failed",
+    "confirmPassword": "Confirm Password",
+    "passwordMismatch": "Passwords do not match",
+    "title": "Create a new account",
+    "alreadyHaveAccount": "Already have an account? Login",
+    "description": "Enter your details below to sign up",
+    "registrationSuccessful": "Registration successful"
   }
 }
