--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -1,47 +1,52 @@
 {
-  "common": {
-    "email": "Email",
-    "password": "Password",
-    "login": "Login",
-    "signUp": "Sign Up",
-    "emailPlaceholder": "john.doe@example.com",
-    "passwordPlaceholder": "********"
-  },
-  "login": {
-    "submitButton": "Login",
-    "loggingIn": "Logging in...",
-    "loginFailed": "Login failed",
-    "title": "Login to your account",
-    "description": "Enter your email below to login to your account",
-    "forgotPassword": "Forgot your password?"
-  },
-  "signUp": {
-    "submitButton": "Sign Up",
-    "signingUp": "Signing up...",
-    "signUpFailed": "Sign up failed",
-    "confirmPassword": "Confirm Password",
-    "passwordMismatch": "Passwords do not match",
-    "title": "Create a new account",
-    "alreadyHaveAccount": "Already have an account? Login",
-    "description": "Enter your details below to sign up",
-    "registrationSuccessful": "Registration successful"
-  },
-  "forgotPassword": {
-    "title": "Forgot your password?",
-    "description": "Enter your email below and we will send you a link to reset your password.",
-    "backToLogin": "Back to Login",
-    "emailSent": "If your email exists, a reset link has been sent.",
-    "errorResponse": "Error sending reset link.",
-    "submitButton": "Send Reset Link"
-  },
-  "resetPassword": {
-    "title": "Reset your password",
-    "description": "Enter a new password below to reset your password.",
-    "backToLogin": "Back to Login",
-    "success": "Password reset successfully.",
-    "errorResponse": "Error resetting password.",
-    "confirmPassword": "Confirm Password",
-    "passwordMismatch": "Passwords do not match.",
-    "submitButton": "Reset Password"
-  }
+	"common": {
+		"projects": "Projects",
+		"about": "About",
+		"contact": "Contact",
+		"email": "Email",
+		"dashboard": "Dashboard",
+		"password": "Password",
+		"login": "Login",
+		"signUp": "Sign Up",
+		"emailPlaceholder": "john.doe@example.com",
+		"passwordPlaceholder": "********",
+		"selectLanguage": "Select language"
+	},
+	"login": {
+		"submitButton": "Login",
+		"loggingIn": "Logging in...",
+		"loginFailed": "Login failed",
+		"title": "Login to your account",
+		"description": "Enter your email below to login to your account",
+		"forgotPassword": "Forgot your password?"
+	},
+	"signUp": {
+		"submitButton": "Sign Up",
+		"signingUp": "Signing up...",
+		"signUpFailed": "Sign up failed",
+		"confirmPassword": "Confirm Password",
+		"passwordMismatch": "Passwords do not match",
+		"title": "Create a new account",
+		"alreadyHaveAccount": "Already have an account? Login",
+		"description": "Enter your details below to sign up",
+		"registrationSuccessful": "Registration successful"
+	},
+	"forgotPassword": {
+		"title": "Forgot your password?",
+		"description": "Enter your email below and we will send you a link to reset your password.",
+		"backToLogin": "Back to Login",
+		"emailSent": "If your email exists, a reset link has been sent.",
+		"errorResponse": "Error sending reset link.",
+		"submitButton": "Send Reset Link"
+	},
+	"resetPassword": {
+		"title": "Reset your password",
+		"description": "Enter a new password below to reset your password.",
+		"backToLogin": "Back to Login",
+		"success": "Password reset successfully.",
+		"errorResponse": "Error resetting password.",
+		"confirmPassword": "Confirm Password",
+		"passwordMismatch": "Passwords do not match.",
+		"submitButton": "Reset Password"
+	}
 }
