✨feature: Add Skills page

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -4,6 +4,7 @@
 		"about": "About",
 		"contact": "Contact",
 		"email": "Email",
+		"skills": "Skills",
 		"dashboard": "Dashboard",
 		"password": "Password",
 		"login": "Login",
