--- a/frontend/public/locales/hr/translation.json
+++ b/frontend/public/locales/hr/translation.json
@@ -3,7 +3,8 @@
 		"projects": "Projekti",
 		"about": "O meni",
 		"contact": "Kontakt",
-		"dashboard": "Pregled",
+		"skills": "Vještine",
+		"dashboard": "Nadzorna ploča",
 		"email": "E-pošta",
 		"password": "Lozinka",
 		"login": "Prijava",
